make sure hover for accounts shows on smaller screens

--- a/themes/greatermedia/assets/css/sass/components/_header.scss
+++ b/themes/greatermedia/assets/css/sass/components/_header.scss
@@ -154,6 +154,14 @@
 	@include bp(larger) { // Bourbon Neat mixin for media queries
 		display: none;
 	}
+
+	&:hover {
+
+		.header__account--container {
+			display: block;
+		}
+		
+	}
 }
 
 .header__account--large {
